# reev

./: README-genomics.md  compose.yaml
services/api/: Dockerfile  pyproject.toml  requirements.txt
services/api/genomics_api/: index_bootstrap.py  main.py
services/ingestor/: Dockerfile  pyproject.toml  requirements.txt
services/ingestor/ingestor/: cli.py
ui/: Dockerfile  next.config.mjs  package.json  tsconfig.json
ui/app/: layout.tsx  page.tsx
ui/app/variants/: page.tsx
