[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genomics-api"
version = "0.1.0"
description = "Tertiary genomic analysis API over Parquet/DuckDB and OpenSearch"
authors = [{name="AI Agent"}]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "pyarrow>=16.0",
  "pandas>=2.2",
  "duckdb>=1.0",
  "opensearch-py>=2.4",
  "orjson>=3.10",
  "starlette>=0.40",
  "typing-extensions>=4.8",
  "uvloop; platform_system != 'Windows'",
]

[project.scripts]
start-api = "genomics_api.main:run"